--- a/ProjectDetails.html
+++ b/ProjectDetails.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
     <div id="page">
@@ -21,39 +21,65 @@
         </div>
     </header>
     <div class="topnav">
-        <li><a href="../student.html">หน้าหลัก</a></li>
+        <li><a href="../homepage.html">หน้าหลัก</a></li>
         <li><a href="../testFinal.html">ติดตามผลสอบ</a></li>
         <li><a href="ProjectDetails.html">รายละเอียดโครงงาน</a></li>
         <li><a href="">ยื่นคำร้องขอจบ</a></li>
         <li><a href="../Contact the teacher.html">ติดต่ออาจารย์ที่ปรึกษา</a></li>
         <div class="login">
         <li><a href="../homepage.html">ออกจากระบบ</a></li>
-        <img src="immge/นักศึกษาชาย.jpg" class="profile-pic">
+        <img src="../immge/นักศึกษาชาย.jpg" class="profile-pic">
         </div>   
     </div>
-    <div class="content">
-        <div class="form-container">
-            <img src="../immge/อาจารย์.jpg">
-            <div class="form-group">
-            <div class="form-group">
-                <label>ชื่อ</label>
-                <input type="text" value="ผศ.ดร.สุพาภรณ์ ซิ้มเจริญ">
-            </div>
-            <div class="form-group">
-                <label>หน่วยงาน/สังกัด</label>
-                <input type="text" value="ภาควิชาเทคโนโลยีสารสนเทศ">
-            </div>
-            <div class="form-group">
-                <label>อาจารย์ประจำภาควิชา</label>
-                <input type="text" value="แขนงวิชาเทคโนโลยีเครือข่าย">
-            </div>
-            <div class="form-group">
-                <label>ข้อมูลการติดต่อ</label>
-                <input type="text" value="อีเมล: supaporn.s@itm.kmutnb.ac.th">
-            </div>
-            </div>
-        </div>
-    </div>
+    
+     <main>
+         <section class="project-detail">
+              <h2>รายละเอียดโครงงานของนักศึกษา</h2>
+              <div class="project-info">
+                    <p><strong>ชื่อโครงงาน (TH):</strong>ระบบป้องกันเครื่อข่าย</p>
+                    <p><strong>ชื่อโครงงาน (EN):</strong>Network protection system</p>
+                    <p><strong>รายละเอียด:</strong>เป็นระบบที่ออกแบบมาเพื่อปกป้องข้อมูล ทรัพยากร และอุปกรณ์ภายในเครือข่ายจากภัยคุกคามต่าง ๆ เช่น มัลแวร์ แฮกเกอร์ หรือการเข้าถึงโดยไม่ได้รับอนุญาต</p>
+                    <p><strong>สมาชิกในกลุ่ม:</strong></p>
+                  <ul>
+                     <li>น.ส.นันทิชา ไชยขวัญดี (66022510542)</li>
+                     <li>นายณัฐภัทร แก้วเก่า (66559211002)</li>
+                  </ul>
+                    <p><strong>อาจารย์ที่ปรึกษา:</strong> ผศ.ดร.สุพาภรณ์ ซิ้มเจริญ</p>
+                    <p><strong>สถานะโครงงาน:</strong> อยู่ระหว่างพัฒนา (70%)</p>
+              </div>
+
+                <h3>ไฟล์เอกสาร</h3>
+                <table>
+                   <thead>
+                     <tr>
+                         <th>ชื่อเอกสาร</th>
+                         <th>สถานะ</th>
+                         <th>วันที่อัปโหลด</th>
+                         <th>การดำเนินการ</th>
+                     </tr>
+                    </thead>
+
+                    <tbody>
+                      <tr>
+                         <td>Proposal.pdf</td>
+                         <td>ส่งแล้ว</td>
+                         <td>10/09/2025</td>
+                         <td><a href="#">ดาวน์โหลด</a></td>
+                      </tr>
+                      <tr>
+                         <td>ProgressReport.pdf</td>
+                         <td>ยังไม่ส่ง</td>
+                         <td>-</td>
+                         <td><a href="#">อัปโหลด</a></td>
+                      </tr>
+                    </tbody>
+                </table>
+            </section>
+        </main>
+
+</body>
+</html>
+
     <footer>
         <div class="footer-container">
             <div class="footer-left">
