--- a/testFinal.html
+++ b/testFinal.html
@@ -23,7 +23,7 @@
     <div class="topnav">
         <li><a href="../student.html">หน้าหลัก</a></li>
         <li><a href="../testFinal.html">ติดตามผลสอบ</a></li>
-        <li><a href="">รายละเอียดโครงงาน</a></li>
+        <li><a href="ProjectDetails.html">รายละเอียดโครงงาน</a></li>
         <li><a href="">ยื่นคำร้องขอจบ</a></li>
         <li><a href="../Contact the teacher.html">ติดต่ออาจารย์ที่ปรึกษา</a></li>
         <div class="login">
