--- a/student.html
+++ b/student.html
@@ -24,7 +24,7 @@
         <li><a href="../homepage.html">หน้าหลัก</a></li>
         <li><a href="../testFinal.html">ติดตามผลสอบ</a></li>
         <li><a href="ProjectDetails.html">รายละเอียดโครงงาน</a></li>
-        <li><a href="">ยื่นคำร้องขอจบ</a></li>
+        <li><a href="GraduationRequestForm.html">ยื่นคำร้องขอจบ</a></li>
         <li><a href="../Contact the teacher.html">ติดต่ออาจารย์ที่ปรึกษา</a></li>
         <div class="login">
         <li><a href="../homepage.html">ออกจากระบบ</a></li>
