--- a/user.html
+++ b/user.html
@@ -31,6 +31,7 @@
             <h2 class="title">เลือกประเภทผู้ใช้งาน</h2>
             <a href="teacherHome.html" class="user-btn"> อาจารย์</a>
             <a href="student.html" class="user-btn">นักศึกษา</a>
+            <a href="committeeHome.html" class="user-btn">กรรมการ</a>
         </div>
 
     <footer>
