--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
     </header>
     <div class="topnav">
         <div class="login">
-        <li><a href="../login.html">เข้าสู่ระบบ</a></li> 
+        <li><a href="user.html">เข้าสู่ระบบ</a></li> 
         </div>    
     </div>
     <div class="content">
