--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
     <div class="content"> 
     <div class="content-card">
         <div class="login-card">
-            <form action="student.html" method="get">
+            <form action="teacherHome.html" method="get">
                 <label for="Username">Username</label><br>
                 <input type="text" id="username"><br><br>
                 <label for="">Password</label><br>
@@ -35,7 +35,7 @@
             </form><br>
             <div class="button">
                 <ul>
-                    <li><a href="../user.html">ลงทะเบียนผู้ใช้ใหม่</a><br><br></li>
+                    <li><a href="register.html">ลงทะเบียนผู้ใช้ใหม่</a><br><br></li>
                     <li><a href="../user.html">ลงทะเบียนการสอบโครงการ</a></li>
                 </ul>
             </div>
