--- a/ContactStudent.html
+++ b/ContactStudent.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/contactstudent.css">
 </head>
 <body>
     <div id="page">
@@ -29,6 +30,52 @@
             <img src="../immge/นักศึกษาหญิง.jpg" alt="">
         </div>
     </div>
+
+            <main class="main-content">
+                <h2 class="page-title">รายละเอียดและสถานะโครงงาน: ระบบป้องกันเครื่อข่าย</h2>
+                <p>ข้อมูลความคืบหน้าโดยรวมของกลุ่ม 101</p>
+
+                 <div class="project-detail-block">
+                    <div class="block-header-simple">
+                        <h3 class="project-title-simple">กลุ่ม 555: ระบบป้องกันเครื่อข่าย</h3>
+                        <span class="progress-percent-simple">85%</span>
+                    </div>
+
+                    <div class="info-row">
+                        <span class="info-label">สมาชิก:</span>
+                        <span class="info-value">นายณัฐภัทร แก้วเก่า น.ส.นันทิชา ไชยขวัญดี</span>
+                    </div>
+
+                    <div class="info-row progress-row">
+                        <span class="info-label">ความคืบหน้าปัจจุบัน:</span>
+                        <div class="progress-bar-container-simple full-width-bar">
+                            <div class="progress-bar-simple" style="width: 85%;"></div>
+                        </div>
+                     </div>
+            
+                    <div class="summary-row">
+                        <div class="summary-item">
+                            <span class="score-label-simple">คะแนนรวม (ล่าสุด):</span>
+                            <span class="score-value-simple">82/100</span>
+                        </div>
+                        <div class="summary-item">
+                            <span class="status-label-simple">สถานะการประเมิน:</span>
+                            <span class="status-text-simple tag-evaluated">ผ่านการประเมิน 1</span>
+                        </div>
+                        <div class="summary-item">
+                            <span class="status-label-simple">วันสอบถัดไป:</span>
+                            <span class="status-text-simple">ยังไม่กำหนด</span>
+                        </div>
+                    </div>
+
+                    <div class="action-footer">
+                        <button class="view-detail-btn-simple primary-btn">ดูประวัติการส่งงานทั้งหมด</button>
+                        <button class="view-detail-btn-simple secondary-btn">ให้คำปรึกษา</button>
+                    </div>
+            
+                </div>
+            </main>
+
     <footer>
         <div class="footer-container">
             <div class="footer-left">
