--- a/register1.html
+++ b/register1.html
@@ -26,7 +26,7 @@
     <div class="content"> 
     <div class="content-card">
         <div class="login-card">
-            <form action="teacherHome.html" method="get">
+            <form action="student.html" method="get">
                 <label for="Username">Username</label><br>
                 <input type="text" id="username"><br><br>
                 <label for="email">email</label><br>
