--- a/project-summary.html
+++ b/project-summary.html
@@ -23,7 +23,6 @@
     </header>
     <div class="topnav">
         <li><a href="../homepage.html">หน้าหลัก</a></li>
-        <li><a href="manage-permissions.html">จัดการสิทธิผู้ใช้</a></li>
         <li><a href="set-committee.html">กำหนดกรรมการสอบ</a></li>
         <li><a href="project-summary.html">สรุปโครงงาน</a></li>
         <li><a href="settings.html">การตั้งค่าระบบ</a></li>
@@ -45,7 +44,7 @@
                 </select>
             <button>ค้นหา</button>
          </div>
-
+        <div class="summary-section">
         <table class="summary-table">
             <thead>
                 <tr>
@@ -80,6 +79,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
 
         <div class="export-btn">
             <button>ดาวน์โหลดรายงาน PDF</button>
