--- a/testFinal.html
+++ b/testFinal.html
@@ -34,7 +34,10 @@
     <div class="content">
         <h1>ข้อมูลผลการเรียน</h1>
         <p>เเสดงผลการเรียน</p> 
-        <table>
+
+
+        <div class="table-responsive">
+        <table class="project-table">
             <tr style="background-color: #ff7043;">
                 <th>รายชื่อวิชา</th>
                 <th>เกรด</th>
@@ -68,7 +71,8 @@
                 <td>F</td>
             </tr>
         </table>
-        </div>
+    </div>
+    </div>
     <footer>
         <div class="footer-container">
             <div class="footer-left">
