--- a/ContactStudent.html
+++ b/ContactStudent.html
@@ -32,7 +32,7 @@
     </div>
 
             <main class="main-content">
-                <h2 class="page-title">รายละเอียดและสถานะโครงงาน: ระบบป้องกันเครื่อข่าย</h2>
+                <h2 class="page-title">รายละเอียดและสถานะโครงงาน: ระบบป้องกันเครือข่าย</h2>
                 <p>ข้อมูลความคืบหน้าโดยรวมของกลุ่ม 101</p>
 
                  <div class="project-detail-block">
@@ -43,7 +43,10 @@
 
                     <div class="info-row">
                         <span class="info-label">สมาชิก:</span>
-                        <span class="info-value">นายณัฐภัทร แก้วเก่า น.ส.นันทิชา ไชยขวัญดี</span>
+                        <div class="info-value">
+                            <p>น.ส.นันทิชา ไชยขวัญดี (66022510542)</p>
+                            <p>นายณัฐภัทร แก้วเก่า (66559211002)</p>
+                        </div>
                     </div>
 
                     <div class="info-row progress-row">
@@ -81,8 +84,8 @@
             <div class="footer-left">
         <h3>อื่นๆ</h3>
         <ul>
-            <li><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1y7vnPRgfEhYKhXQVbHxwsdwM1kdxrpRc%2Fview%3Fusp%3Dsharing&h=AT25me3oUQqxi9kQCxX723da5SBsMU1qLoboOF0MvWpid5MX52f6VdV5v-VOSPSlpVg5EVGWXq1_64Xk5VHzoolRpxXp72QIjt1g5WW40QYoexaRIpDLNfTcZXRxVuRxIP4BPuu4AQGm6CdcAUkDDjXAqPFhnFmK&__tn__=-UK-R&c[0]=AT3jlIObfIGGfA3A1uBpUL9n6qO4dfWgmYJJGgrRZIVycCSb6PFWXJZquHACZHZ_xN76WsmucF2PlLvqiHFimAsaI0_X6tBO6fKDu2IofnuPZh18OnkwdcR1jJolVD-XeeUT14CjoUyNW5YnwDRkDHma8PINo7loERYWuIHmM55c4wUAAMAKe-ZaM-3QYr4">ตารางสอบ</a></li>
-            <li><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Fdrive%2Ffolders%2F1KU2qisg69m7mp3FwvtxrbTMmTbRrFdX_%3Fusp%3Ddrive_link&h=AT3XYAvYiVkW2-9SV7d4Wmsa3nmCkm_zIKGf27iGDHTfINFL9bAoGEID-Rav28gQLfcZCVVW1GfgNA-xNJzMBCzmkcAcDodnrK3jdiVZ2JpGjAs_no-WSH-b2FDAVVXIWPn8gqgz5Bi99y6MW23T6I2y56o2pK3g&__tn__=-UK-R&c[0]=AT3jlIObfIGGfA3A1uBpUL9n6qO4dfWgmYJJGgrRZIVycCSb6PFWXJZquHACZHZ_xN76WsmucF2PlLvqiHFimAsaI0_X6tBO6fKDu2IofnuPZh18OnkwdcR1jJolVD-XeeUT14CjoUyNW5YnwDRkDHma8PINo7loERYWuIHmM55c4wUAAMAKe-ZaM-3QYr4">ตรวจสอบรายชื่อสอบ</a></li>
+            <li><a href="evaluation-section.html">เกณฑ์การให้คะแนน</a></li>
+            <li><a href="system-guide.html.html">คู่มือการใช้งาน</a></li>
         </ul>
         </div>
         <div class="footer-right">
