--- a/topics.html
+++ b/topics.html
@@ -31,7 +31,7 @@
     </div>
 
             <main class="main-content">
-            <h2 class="page-title">คู่มือและเกณฑ์การประเมินโครงงานนักศึกษา</h2>
+            <h2 class="page-title">หัวข้อการสอบ</h2>
             <p>คู่มือนี้ใช้เป็นมาตรฐานในการให้คะแนนโครงงาน โดยแบ่งเกณฑ์ออกเป็น 3 ส่วนหลัก (รวม 100 คะแนน) และคณะกรรมการต้องใช้เกณฑ์นี้ในการให้คะแนนทุกกลุ่ม</p>
 
             <div class="topic-list">
@@ -80,8 +80,8 @@
             <div class="footer-left">
         <h3>อื่นๆ</h3>
         <ul>
-            <li><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1y7vnPRgfEhYKhXQVbHxwsdwM1kdxrpRc%2Fview%3Fusp%3Dsharing&h=AT25me3oUQqxi9kQCxX723da5SBsMU1qLoboOF0MvWpid5MX52f6VdV5v-VOSPSlpVg5EVGWXq1_64Xk5VHzoolRpxXp72QIjt1g5WW40QYoexaRIpDLNfTcZXRxVuRxIP4BPuu4AQGm6CdcAUkDDjXAqPFhnFmK&__tn__=-UK-R&c[0]=AT3jlIObfIGGfA3A1uBpUL9n6qO4dfWgmYJJGgrRZIVycCSb6PFWXJZquHACZHZ_xN76WsmucF2PlLvqiHFimAsaI0_X6tBO6fKDu2IofnuPZh18OnkwdcR1jJolVD-XeeUT14CjoUyNW5YnwDRkDHma8PINo7loERYWuIHmM55c4wUAAMAKe-ZaM-3QYr4">ตารางสอบ</a></li>
-            <li><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Fdrive%2Ffolders%2F1KU2qisg69m7mp3FwvtxrbTMmTbRrFdX_%3Fusp%3Ddrive_link&h=AT3XYAvYiVkW2-9SV7d4Wmsa3nmCkm_zIKGf27iGDHTfINFL9bAoGEID-Rav28gQLfcZCVVW1GfgNA-xNJzMBCzmkcAcDodnrK3jdiVZ2JpGjAs_no-WSH-b2FDAVVXIWPn8gqgz5Bi99y6MW23T6I2y56o2pK3g&__tn__=-UK-R&c[0]=AT3jlIObfIGGfA3A1uBpUL9n6qO4dfWgmYJJGgrRZIVycCSb6PFWXJZquHACZHZ_xN76WsmucF2PlLvqiHFimAsaI0_X6tBO6fKDu2IofnuPZh18OnkwdcR1jJolVD-XeeUT14CjoUyNW5YnwDRkDHma8PINo7loERYWuIHmM55c4wUAAMAKe-ZaM-3QYr4">ตรวจสอบรายชื่อสอบ</a></li>
+            <li><a href="evaluation-section.html">เกณฑ์การให้คะแนน</a></li>
+            <li><a href="system-guide.html.html">คู่มือการใช้งาน</a></li>
         </ul>
         </div>
         <div class="footer-right">
