--- a/project-summary.html
+++ b/project-summary.html
@@ -60,21 +60,21 @@
                     <td>ระบบจัดการโครงงานนักศึกษา</td>
                     <td>น.ส.นันทิชา ไชยขวัญดี</td>
                     <td>ผศ.ดร.สุพาภรณ์ ซิ้มเจริญ</td>
-                    <td><span class="status doing">กำลังทำ</span></td>
+                    <td><span class="status-tag status-doing">กำลังทำ</span></td>
                     <td>-</td>
                 </tr>
                 <tr>
                     <td>ระบบลงทะเบียนเรียนออนไลน์</td>
                     <td>น.ส.นันทิชา ไชยขวัญดี</td>
                     <td>ผศ.ดร.สุพาภรณ์ ซิ้มเจริญ</td>
-                    <td><span class="status pending">รอสอบ</span></td>
+                    <td><span class="status-tag status-pending">รอสอบ</span></td>
                     <td>-</td>
                 </tr>
                 <tr>
                     <td>ระบบห้องสมุดอัจฉริยะ</td>
                     <td>น.ส.นันทิชา ไชยขวัญดี</td>
                     <td>ผศ.ดร.สุพาภรณ์ ซิ้มเจริญ</td>
-                    <td><span class="status done">ผ่านแล้ว</span></td>
+                    <td><span class="status-tag status-done">ผ่านแล้ว</span></td>
                     <td>85</td>
                 </tr>
             </tbody>
